<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <!-- Main Section -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_folder"
            android:title="@string/nav_projects" />
        
        <item
            android:id="@+id/nav_project_builder"
            android:icon="@drawable/ic_building"
            android:title="@string/project_builder" />
        
        <item
            android:id="@+id/nav_designs"
            android:icon="@drawable/ic_design"
            android:title="My Designs" />
    </group>
    
    <!-- Design Tools Section -->
    <item android:title="@string/concrete_design">
        <menu>
            <item
                android:id="@+id/nav_beam"
                android:icon="@drawable/ic_beam"
                android:title="@string/beam_design" />
            
            <item
                android:id="@+id/nav_column"
                android:icon="@drawable/ic_column"
                android:title="@string/column_design" />
            
            <item
                android:id="@+id/nav_slab"
                android:icon="@drawable/ic_slab"
                android:title="@string/slab_design" />
            
            <item
                android:id="@+id/nav_footing"
                android:icon="@drawable/ic_footing"
                android:title="@string/footing_design" />
            
            <item
                android:id="@+id/nav_stairs"
                android:icon="@drawable/ic_stairs"
                android:title="@string/staircase_design" />
            
            <item
                android:id="@+id/nav_retaining"
                android:icon="@drawable/ic_wall"
                android:title="@string/retaining_wall" />
            
            <item
                android:id="@+id/nav_water_tank"
                android:icon="@drawable/ic_water"
                android:title="@string/water_tank" />
            
            <item
                android:id="@+id/nav_pile"
                android:icon="@drawable/ic_pile"
                android:title="@string/pile_foundation" />
            
            <item
                android:id="@+id/nav_seismic"
                android:icon="@drawable/ic_earthquake"
                android:title="@string/seismic_analysis" />
        </menu>
    </item>
    
    <!-- Utilities Section -->
    <item android:title="@string/nav_tools">
        <menu>
            <item
                android:id="@+id/nav_converter"
                android:icon="@drawable/ic_converter"
                android:title="@string/unit_converter" />
            
            <item
                android:id="@+id/nav_calculator"
                android:icon="@drawable/ic_calculator"
                android:title="@string/scientific_calculator" />
            
            <item
                android:id="@+id/nav_quantity"
                android:icon="@drawable/ic_quantity"
                android:title="@string/quantity_surveying" />
            
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_image"
                android:title="@string/detail_gallery" />
        </menu>
    </item>
    
    <!-- Pricing Section -->
    <item android:title="Pricing">
        <menu>
            <item
                android:id="@+id/nav_price_settings"
                android:icon="@drawable/ic_price"
                android:title="@string/price_settings" />
        </menu>
    </item>
    
    <!-- Preferences Section -->
    <item android:title="@string/nav_settings">
        <menu>
            <item
                android:id="@+id/nav_settings_main"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
            
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/help_support" />
        </menu>
    </item>
</menu>
